added tuning hyp

--- a/14-actor-critic-study.student.ipynb
+++ b/14-actor-critic-study.student.ipynb
@@ -67,31 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "id": "9b2e8a1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import numpy as np \n",
+    "import seaborn as sns "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6281c86",
    "metadata": {
     "lines_to_next_cell": 1
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib backend: module://matplotlib_inline.backend_inline\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gymnasium as gym\n",
     "\n",
@@ -169,89 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f224f77c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>table.maze {\n",
-       "    border-collapse: collapse;\n",
-       "}\n",
-       "\n",
-       "td {\n",
-       "    text-align: center;\n",
-       "}\n",
-       "\n",
-       "table.maze td.cell {\n",
-       "    position: relative;\n",
-       "    border: 1px solid black;\n",
-       "}\n",
-       "\n",
-       "table.maze td.cell div.agent {\n",
-       "    position: absolute;\n",
-       "    left: 25%;\n",
-       "    top: 25%;;\n",
-       "    width: 50%;\n",
-       "    height: 50%;\n",
-       "    border-radius: 100%;\n",
-       "    background:rgba(69, 100, 186, 0.5);\n",
-       "}\n",
-       "\n",
-       "\n",
-       "td.wall {\n",
-       "    background: black;\n",
-       "}\n",
-       "\n",
-       "td.terminal {\n",
-       "    background: rgb(246, 170, 246);\n",
-       "}\n",
-       "\n",
-       "table.maze table td {\n",
-       "    width: .5rem;\n",
-       "    height: .5rem;\n",
-       "}\n",
-       "\n",
-       "\n",
-       "\n",
-       "table.maze table td.arrow {\n",
-       "    color: transparent;\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       "table.maze table td.value {\n",
-       "    position: relative;\n",
-       "    width: 2rem;\n",
-       "    height: 2rem;\n",
-       "}\n",
-       "\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3711a5814e114f9583b56e56ad7cff08",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(MazeWidget(cells=array([[-1,  1,  4,  7],\n",
-       "       [-1,  2,  5,  8],\n",
-       "       [ 0,  3,  6,  9]]), t…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gymnasium as gym\n",
     "import numpy as np \n",
@@ -268,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "id": "1e7643de",
    "metadata": {
     "lines_to_next_cell": 1
@@ -286,6 +201,21 @@
     "    alpha_actor : float=0.5,\n",
     "    render: bool = True,\n",
     ") -> tuple[np.ndarray, List[float]]:\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        mdp: the environment\n",
+    "        nb_episodes: the number of episodes\n",
+    "        timeout: the maximum number of steps per episode\n",
+    "        alpha_critic: the critic learning rate\n",
+    "        alpha_actor: the actor learning rate\n",
+    "        render: whether to render the environment\n",
+    "    Returns:\n",
+    "        a_probs: the learned policy\n",
+    "        v: the learned value function\n",
+    "        v_list: the norm of the value function at\n",
+    "        time_list: the number of steps per episode\n",
+    "    \"\"\"\n",
+    "\n",
     "    # Initialize the state-action value function\n",
     "    # alpha is the learning rate\n",
     "    v = np.zeros(mdp.unwrapped.nb_states)  # initial state value v\n",
@@ -340,45 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "e991705d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Cours-Sorbonne/M2/UE_DEEP/.venv/lib/python3.10/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.init_draw to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.init_draw` for environment variables or `env.get_wrapper_attr('init_draw')` that will search the reminding wrappers.\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db4cdcce70a847a48b698b591ce157eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(MazeWidget(cells=array([[-1,  1,  4,  7],\n",
-       "       [-1,  2,  5,  8],\n",
-       "       [ 0,  3,  6,  9]]), t…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Cours-Sorbonne/M2/UE_DEEP/.venv/lib/python3.10/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.draw_v_pi to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.draw_v_pi` for environment variables or `env.get_wrapper_attr('draw_v_pi')` that will search the reminding wrappers.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/mnt/c/Cours-Sorbonne/M2/UE_DEEP/.venv/lib/python3.10/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.gamma to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.gamma` for environment variables or `env.get_wrapper_attr('gamma')` that will search the reminding wrappers.\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "NB_EPISODES = 100\n",
     "TIMEOUT = 50\n",
@@ -392,32 +287,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 79,
    "id": "2d21dcc3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.27466826e-01, 1.13146645e-01, 6.44820172e-01, 1.14566357e-01],\n",
-       "       [1.21059986e-01, 5.59948268e-01, 1.97920524e-01, 1.21071222e-01],\n",
-       "       [8.11309572e-02, 2.89931614e-01, 6.28937418e-01, 1.00907046e-08],\n",
-       "       [9.42029902e-09, 1.21736141e-01, 8.78263841e-01, 8.78808368e-09],\n",
-       "       [1.09540099e-01, 6.53464805e-01, 1.09815316e-01, 1.27179780e-01],\n",
-       "       [9.46836300e-09, 9.83306445e-01, 1.66935353e-02, 1.00891060e-08],\n",
-       "       [7.06451818e-09, 9.82993958e-09, 9.99999978e-01, 5.32859662e-09],\n",
-       "       [7.38572615e-02, 8.83669139e-01, 2.46467713e-02, 1.78268286e-02],\n",
-       "       [9.34071830e-09, 9.99999973e-01, 9.18322697e-09, 8.35304460e-09],\n",
-       "       [1.04856564e-01, 4.16384724e-01, 1.34246550e-01, 3.44512162e-01]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a"
+    "plt.figure(figsize=(12, 7))\n",
+    "sns.heatmap(a, annot=True, fmt=\".2f\", cmap=\"viridis\")\n",
+    "plt.title(\"Actor probabilities\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -435,22 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "id": "04f00ef3",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
-    "import numpy as np \n",
-    "import seaborn as sns \n",
-    "\n",
-    "\n",
     "def moving_average(data, window_size):\n",
     "    return np.convolve(data, np.ones(window_size)/window_size, mode='valid')\n",
     "\n",
     "\n",
-    "def plot_evolution(time_list):\n",
+    "def plot_evolution(time_list, save_path=\"figure1\"):\n",
     "    mean = np.round(np.mean(time_list), 2)\n",
     "    std = np.round(np.std(time_list), 2)\n",
     "    q1 = np.percentile(time_list, 25)\n",
@@ -501,6 +375,8 @@
     "    plt.legend(handles, labels, loc='upper right')\n",
     "\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(save_path)\n",
+    "\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -522,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 83,
    "id": "a685f967",
    "metadata": {
     "lines_to_next_cell": 1
@@ -538,7 +414,7 @@
     "        \"height\": 5,\n",
     "        \"ratio\": 0.2,\n",
     "        \"render_mode\": \"rgb_array\",\n",
-    "        },\n",
+    "    },\n",
     "        \n",
     "    \"log_dir\": \"./tmp\",\n",
     "    \"video_dir\": \"./tmp/videos\",\n",
@@ -565,26 +441,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "316bb3de",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Not implemented yet",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# To be completed...\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNot implemented yet\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Not implemented yet"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# To be completed...\n",
+    "config = OmegaConf.create(ac_params)\n",
     "\n",
-    "assert False, 'Not implemented yet'\n"
+    "env_config = gym.make(\n",
+    "    config.mdp.name,\n",
+    "    kwargs={\n",
+    "        \"width\": config.mdp.width,\n",
+    "        \"height\": config.mdp.height,\n",
+    "        \"ratio\": config.mdp.ratio,\n",
+    "        \"hit\": 0.0,\n",
+    "    },\n",
+    "    render_mode=config.mdp.render_mode,\n",
+    ")\n",
+    "\n",
+    "a_probs, v, v_list, time_list = actor_critic(\n",
+    "    env_config, alpha_critic=config.alpha_critic, \n",
+    "    alpha_actor=config.alpha_actor, nb_episodes=config.nb_episodes, \n",
+    "    timeout=config.timeout\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea6dc43b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_evolution(time_list, save_path=\"steps_per_episode_config_0.png\")"
    ]
   },
   {
@@ -617,14 +506,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "251a2c6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To be completed...\n",
+    "from optuna.visualization import plot_optimization_history\n",
     "\n",
-    "assert False, 'Not implemented yet'\n"
+    "\n",
+    "stats = []\n",
+    "\n",
+    "class ObjectiveFunction():\n",
+    "    @staticmethod\n",
+    "    def objective_by_steps(trial : optuna.Trial):\n",
+    "        alpha_critic = trial.suggest_float(\"alpha_critic\", 1e-2, 1.0)\n",
+    "        alpha_actor = trial.suggest_float(\"alpha_actor\", 1e-2, 1.0)\n",
+    "\n",
+    "        a_probs, v, v_list, time_list = actor_critic(\n",
+    "            env_config, alpha_critic=alpha_critic, \n",
+    "            alpha_actor=alpha_actor, nb_episodes=config.nb_episodes, \n",
+    "            timeout=config.timeout\n",
+    "        )\n",
+    "\n",
+    "        stats.append({\n",
+    "            \"alpha_critic\": alpha_critic,\n",
+    "            \"alpha_actor\": alpha_actor,\n",
+    "            \"time_list\": time_list,\n",
+    "            \"v_list\": v_list,\n",
+    "            \"a_probs\": a_probs,\n",
+    "            \"v\": v\n",
+    "        })\n",
+    "        return np.mean(time_list)\n",
+    "\n",
+    "\n",
+    "class TuningAlgorithm():\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def tune_by_bayesian_optimization(objective = ObjectiveFunction.objective_by_steps):\n",
+    "        study = optuna.create_study(direction=\"minimize\")\n",
+    "        study.optimize(objective, n_trials=400)\n",
+    "        \n",
+    "        fig = plot_optimization_history(study)\n",
+    "        fig.show()\n",
+    "\n",
+    "        print(f\"Best parameters: {study.best_params}\")\n",
+    "        print(f\"Best score: {study.best_value}\")\n",
+    "\n",
+    "        return study.best_params\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def tune_by_grid_search(objective = ObjectiveFunction.objective_by_steps):\n",
+    "        search_space = {\n",
+    "            \"alpha_critic\": np.linspace(1e-2, 1.0, 20),\n",
+    "            \"alpha_actor\": np.linspace(1e-2, 1.0, 20)\n",
+    "        }\n",
+    "        sampler = optuna.samplers.GridSampler(search_space)\n",
+    "        study = optuna.create_study(direction=\"minimize\", sampler=sampler)\n",
+    "        study.optimize(objective, n_trials=400)\n",
+    "\n",
+    "        fig = plot_optimization_history(study)\n",
+    "        fig.show()\n",
+    "\n",
+    "        print(f\"Best parameters: {study.best_params}\")\n",
+    "        print(f\"Best score: {study.best_value}\")\n",
+    "\n",
+    "        return study.best_params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe5be91",
+   "metadata": {},
+   "source": [
+    "## Tune hyperparameters by grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b316a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TuningAlgorithm.tune_by_grid_search()\n",
+    "np.save(\"stats_grid_search.npy\", stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a6d1fd8",
+   "metadata": {},
+   "source": [
+    "## Tune hyperparameters by bayesian optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fff48d33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = []\n",
+    "TuningAlgorithm.tune_by_bayesian_optimization()\n",
+    "np.save(\"stats_bayesian_optimization.npy\", stats)"
    ]
   },
   {
