tuning with screen on PPTI

--- a/14-actor-critic-study.student.ipynb
+++ b/14-actor-critic-study.student.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ec87094b",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "9b2e8a1e",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "1e7643de",
    "metadata": {
     "lines_to_next_cell": 1
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "2d21dcc3",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "04f00ef3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "a685f967",
    "metadata": {
     "lines_to_next_cell": 1
@@ -506,19 +506,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "251a2c6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from optuna.visualization import plot_optimization_history\n",
-    "\n",
-    "\n",
     "stats = []\n",
     "\n",
     "class ObjectiveFunction():\n",
     "    @staticmethod\n",
     "    def objective_by_steps(trial : optuna.Trial):\n",
+    "        global stats\n",
+    "        \n",
     "        alpha_critic = trial.suggest_float(\"alpha_critic\", 1e-2, 1.0)\n",
     "        alpha_actor = trial.suggest_float(\"alpha_actor\", 1e-2, 1.0)\n",
     "\n",
@@ -544,15 +543,12 @@
     "    @staticmethod\n",
     "    def tune_by_bayesian_optimization(objective = ObjectiveFunction.objective_by_steps):\n",
     "        study = optuna.create_study(direction=\"minimize\")\n",
-    "        study.optimize(objective, n_trials=400)\n",
+    "        study.optimize(objective, n_trials=1)\n",
     "        \n",
-    "        fig = plot_optimization_history(study)\n",
-    "        fig.show()\n",
-    "\n",
     "        print(f\"Best parameters: {study.best_params}\")\n",
     "        print(f\"Best score: {study.best_value}\")\n",
     "\n",
-    "        return study.best_params\n",
+    "        return study.best_params, study \n",
     "    \n",
     "    @staticmethod\n",
     "    def tune_by_grid_search(objective = ObjectiveFunction.objective_by_steps):\n",
@@ -562,15 +558,12 @@
     "        }\n",
     "        sampler = optuna.samplers.GridSampler(search_space)\n",
     "        study = optuna.create_study(direction=\"minimize\", sampler=sampler)\n",
-    "        study.optimize(objective, n_trials=400)\n",
-    "\n",
-    "        fig = plot_optimization_history(study)\n",
-    "        fig.show()\n",
+    "        study.optimize(objective)\n",
     "\n",
     "        print(f\"Best parameters: {study.best_params}\")\n",
     "        print(f\"Best score: {study.best_value}\")\n",
     "\n",
-    "        return study.best_params"
+    "        return study.best_params, study "
    ]
   },
   {
@@ -588,6 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "stats = []\n",
     "TuningAlgorithm.tune_by_grid_search()\n",
     "np.save(\"stats_grid_search.npy\", stats)"
    ]
@@ -790,6 +784,14 @@
     "    )\n",
     "    # plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21648671",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
