--- a/14-actor-critic-study.student.ipynb
+++ b/14-actor-critic-study.student.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 72,
    "id": "04f00ef3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -408,7 +408,7 @@
     "    @staticmethod\n",
     "    def compare_plots(results:dict):\n",
     "        Plotter.plot_multiples(\n",
-    "            [results[i][\"time_list\"] for i in range(len(results))], \n",
+    "            [results[i]['lists'][\"time_list\"] for i in range(len(results))], \n",
     "            save_path=\"steps_per_episode_multiple\",\n",
     "            title=\"Steps per episode\",\n",
     "            xlabel=\"Episode\",\n",
@@ -416,7 +416,7 @@
     "            labels=[results[i][\"name\"] for i in range(len(results))]\n",
     "        ) \n",
     "        Plotter.plot_multiples(\n",
-    "            [results[i][\"mean_reward\"] for i in range(len(results))], \n",
+    "            [results[i]['lists'][\"mean_reward\"] for i in range(len(results))], \n",
     "            save_path=\"reward_per_episode multiple\",\n",
     "            title=\"Reward per episode\",\n",
     "            xlabel=\"Episode\",\n",
@@ -424,7 +424,7 @@
     "            labels=[results[i][\"name\"] for i in range(len(results))]    \n",
     "        ) \n",
     "        Plotter.plot_multiples(\n",
-    "            [results[i][\"v_list\"] for i in range(len(results))], \n",
+    "            [results[i]['lists'][\"v_list\"] for i in range(len(results))], \n",
     "            save_path=\"value_per_episode_multiple\",\n",
     "            title=\"Norm of value per episode\",\n",
     "            xlabel=\"Episode\",\n",
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 95,
    "id": "24227c11",
    "metadata": {
     "lines_to_next_cell": 1
@@ -946,8 +946,8 @@
     "    lab1 = plt.xlabel(\"training steps\")\n",
     "    lab2 = plt.ylabel(\"performance\")\n",
     "\n",
-    "    plt.plot(steps, central1, linewidth=10)\n",
-    "    plt.plot(steps, central2, linewidth=10)\n",
+    "    plt.plot(steps, central1, linewidth=7)\n",
+    "    plt.plot(steps, central2, linewidth=7)\n",
     "    plt.fill_between(steps, low1, high1, alpha=0.3)\n",
     "    plt.fill_between(steps, low2, high2, alpha=0.3)\n",
     "    leg = ax.legend(legend, frameon=False)\n",
@@ -1032,14 +1032,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 111,
    "id": "2558339b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class AnalyseStatistique():\n",
     "    @staticmethod\n",
-    "    def evaluate_actor_critic(best_params: dict, nb_episodes: int = 150):\n",
+    "    def evaluate_actor_critic(best_params: dict, nb_episodes: int = 150, n_iter=15):\n",
     "        \n",
     "        best_alpha_critic = best_params[\"alpha_critic\"]\n",
     "        best_alpha_actor = best_params[\"alpha_actor\"]\n",
@@ -1053,22 +1053,35 @@
     "\n",
     "            env_v_list, env_time_list, env_mean_reward = [], [], []\n",
     "            for env_i in envs:\n",
-    "                _, _, v_list, time_list, reward_list = actor_critic(\n",
-    "                    env_i, alpha_critic=alpha_critic, alpha_actor=alpha_actor, nb_episodes=nb_episodes, timeout=config.timeout, render=False\n",
-    "                )\n",
-    "                env_v_list.append(v_list)\n",
-    "                env_time_list.append(time_list)\n",
-    "                env_mean_reward.append(reward_list)\n",
+    "                all_v_list, all_time_list, all_mean_reward = [], [], []\n",
+    "                for _ in range(n_iter):\n",
+    "                    _, _, v_list, time_list, reward_list = actor_critic(\n",
+    "                        env_i, alpha_critic=alpha_critic, alpha_actor=alpha_actor, nb_episodes=nb_episodes, timeout=config.timeout, render=False\n",
+    "                    )\n",
+    "                    all_v_list.append(v_list)\n",
+    "                    all_time_list.append(time_list)\n",
+    "                    all_mean_reward.append(reward_list)\n",
     "\n",
-    "            env_v_list = np.mean(env_v_list, axis=0)\n",
-    "            env_time_list = np.mean(env_time_list, axis=0)\n",
-    "            env_mean_reward = np.mean(env_mean_reward, axis=0)\n",
+    "                env_v_list.append(np.mean(all_v_list, axis=0))\n",
+    "                env_time_list.append(np.mean(all_time_list, axis=0))\n",
+    "                env_mean_reward.append(np.mean(all_mean_reward, axis=0))\n",
     "\n",
+    "            \n",
+    "            all_v_list = np.mean(env_v_list, axis=0)\n",
+    "            all_time_list = np.mean(env_time_list, axis=0)\n",
+    "            all_mean_reward = np.mean(env_mean_reward, axis=0)\n",
     "\n",
     "            results[i] = {\n",
-    "                \"v_list\": env_v_list,\n",
-    "                \"time_list\": env_time_list,\n",
-    "                \"mean_reward\": env_mean_reward,\n",
+    "                \"statistical_lists\": {\n",
+    "                    \"all_v_list\": np.array(env_v_list),\n",
+    "                    \"all_time_list\": np.array(env_time_list),\n",
+    "                    \"all_mean_reward\": np.array(env_mean_reward),\n",
+    "                },\n",
+    "                \"lists\": {\n",
+    "                    \"v_list\": all_v_list,\n",
+    "                    \"time_list\": all_time_list,\n",
+    "                    \"mean_reward\": all_mean_reward,\n",
+    "                },\n",
     "                \"name\" : f\"alpha_critic: {np.round(alpha_critic,3)}, alpha_actor: {np.round(alpha_actor,3)}\",\n",
     "                \"id\": i\n",
     "            }\n",
@@ -1077,19 +1090,52 @@
     "    \n",
     "    @staticmethod\n",
     "    def compare_statistical_performance(results:dict):\n",
-    "        for i in range(len(results)):\n",
+    "        names = {\n",
+    "            0: \"Default\",\n",
+    "            1: \"Bayesian Optimization\",\n",
+    "            2: \"Grid Search\",\n",
+    "        }\n",
+    "        \n",
+    "        for i in range(len(results)-1):\n",
     "            for j in range(i+1, len(results)):\n",
-    "                perform_test(results[i][\"time_list\"], results[j][\"time_list\"], \"Bayesian Optimization\", f\"Grid Search_Steps_{results[i]['id']}_vs_{results[j]['id']}\")\n",
-    "                perform_test(results[i][\"mean_reward\"], results[j][\"mean_reward\"], \"Bayesian Optimization\", f\"Grid Search_Reward_{results[i]['id']}_vs_{results[j]['id']}\")\n",
-    "                perform_test(results[i][\"v_list\"], results[j][\"v_list\"], \"Bayesian Optimization\", f\"Grid Search_Value_{results[i]['id']}_vs_{results[j]['id']}\")\n"
+    "                name, name2 = names[i], names[j]\n",
+    "\n",
+    "                print(f\"Comparing {name} and {name2}\",i,j)\n",
+    "                perform_test(results[i]['statistical_lists'][\"all_time_list\"], results[j]['statistical_lists'][\"all_time_list\"], name, name2+\" steps\")\n",
+    "                perform_test(results[i]['statistical_lists'][\"all_mean_reward\"], results[j]['statistical_lists'][\"all_mean_reward\"], name, name2+\" reward\")\n",
+    "                perform_test(results[i]['statistical_lists'][\"all_v_list\"], results[j]['statistical_lists'][\"all_v_list\"], name, name2+\" value norm\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "33df1bc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running actor-critic with alpha_critic: 0.5, alpha_actor: 0.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Cours-Sorbonne/M2/UE_DEEP/.venv/lib/python3.10/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.gamma to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.gamma` for environment variables or `env.get_wrapper_attr('gamma')` that will search the reminding wrappers.\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running actor-critic with alpha_critic: 0.804400103698065, alpha_actor: 0.9882472809398611\n",
+      "Running actor-critic with alpha_critic: 0.8436842105263158, alpha_actor: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "best_params = {\n",
     "    \"alpha_critic\": [\n",
@@ -1109,20 +1155,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 100,
    "id": "bbe42deb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "invalid command name \"140189973536064process_stream_events\"\n",
+      "    while executing\n",
+      "\"140189973536064process_stream_events\"\n",
+      "    (\"after\" script)\n",
+      "can't invoke \"event\" command: application has been destroyed\n",
+      "    while executing\n",
+      "\"event generate $w <<ThemeChanged>>\"\n",
+      "    (procedure \"ttk::ThemeChanged\" line 6)\n",
+      "    invoked from within\n",
+      "\"ttk::ThemeChanged\"\n"
+     ]
+    }
+   ],
    "source": [
     "Plotter.compare_plots(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "9503b277",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparing Default and Bayesian Optimization 0 1\n",
+      "Comparing Default and Grid Search 0 2\n",
+      "Comparing Bayesian Optimization and Grid Search 1 2\n"
+     ]
+    }
+   ],
    "source": [
     "AnalyseStatistique.compare_statistical_performance(results)"
    ]
