--- a/14-actor-critic-study.student_v2.ipynb
+++ b/14-actor-critic-study.student_v2.ipynb
@@ -250,14 +250,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8dcedeecefd4f9487072779c609600c",
+       "model_id": "7dce9b350c534993b82d2d3f8f41204e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(MazeWidget(cells=array([[ 0,  3,  5,  8],\n",
-       "       [ 1, -1,  6,  9],\n",
-       "       [ 2,  4,  7, -1]]), t…"
+       "VBox(children=(MazeWidget(cells=array([[ 0,  3, -1,  7],\n",
+       "       [ 1,  4,  5,  8],\n",
+       "       [ 2, -1,  6,  9]]), t…"
       ]
      },
      "metadata": {},
@@ -385,14 +385,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7e82aa5fd954e17adb1bb5d37c66e24",
+       "model_id": "521f582212764f43a38e4ccbc4a62e74",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(MazeWidget(cells=array([[ 0,  3,  5,  8],\n",
-       "       [ 1, -1,  6,  9],\n",
-       "       [ 2,  4,  7, -1]]), t…"
+       "VBox(children=(MazeWidget(cells=array([[ 0,  3, -1,  7],\n",
+       "       [ 1,  4,  5,  8],\n",
+       "       [ 2, -1,  6,  9]]), t…"
       ]
      },
      "metadata": {},
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2d21dcc3",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "04f00ef3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5f80f3a4",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a685f967",
    "metadata": {
     "lines_to_next_cell": 1
@@ -635,10 +635,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "316bb3de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Cours-Sorbonne/M2/UE_DEEP/.venv/lib/python3.10/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: env.gamma to get variables from other wrappers is deprecated and will be removed in v1.0, to get this variable you can do `env.unwrapped.gamma` for environment variables or `env.get_wrapper_attr('gamma')` that will search the reminding wrappers.\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "config = OmegaConf.create(ac_params)\n",
     "\n",
@@ -700,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "251a2c6a",
    "metadata": {},
    "outputs": [],
@@ -708,6 +717,12 @@
     "stats = []\n",
     "\n",
     "class EnvManager():\n",
+    "    \"\"\"\n",
+    "    Class to manage the environments\n",
+    "    Methods:\n",
+    "        - generate_envs\n",
+    "    \"\"\"\n",
+    "    \n",
     "    @staticmethod\n",
     "    def generate_envs(nb_env):\n",
     "        envs = [\n",
@@ -1783,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "a2258ad0",
    "metadata": {
     "lines_to_next_cell": 1
@@ -1798,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "ba2201b1",
    "metadata": {
     "lines_to_next_cell": 1
@@ -1836,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "3f30e0af",
    "metadata": {
     "lines_to_next_cell": 1
@@ -1872,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "24227c11",
    "metadata": {
     "lines_to_next_cell": 1
